--- a/00-ES6语法/00-let和const命令.html
+++ b/00-ES6语法/00-let和const命令.html
@@ -17,7 +17,7 @@
 
   // 2. 不存在变量提升
   console.log(foo);  // 输出undefined
-  var foo = 'foo';
+  var foo = 'fooo';
   // 在未声明之前是不可以使用的
   console.log(bar);
   let bar = 'bar';  //Uncaught ReferenceError: Cannot access 'bar' before initialization
