--- a/组件化开发/组件通信/4.父子组件数据双向绑定.html
+++ b/组件化开发/组件通信/4.父子组件数据双向绑定.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>父子组件数据双向绑定</title>
-    <script src="../js/vue.js"></script>
+    <script src="../../js/vue.js"></script>
 </head>
 
 <body>
